# hashcode2018

./: .gitignore  CMakeLists.txt  README.md  zip.sh
src/: input_class.h  main.cpp
src/base/: input.h  output.h  solver.h
src/domain/: map.h  ride.h  vehicle.h
src/output/: e_high_bonus.out
src/solver/hamilton_solver/: hamilton_solver.cpp  hamilton_solver.h
src/solver/metropolis_solver/: metropolis_solver.cpp  metropolis_solver.h
src/solver/my_solver/: my_solver.cpp  my_solver.h
src/solver/uber_solver/: uber_solver.cpp  uber_solver.h
